openshift/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: dotnetcore-ex
    app.kubernetes.io/component: dotnetcore-ex
    app.kubernetes.io/instance: dotnetcore-ex
  name: dotnetcore-ex
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: dotnetcore-ex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        deployment: dotnetcore-ex
    spec:
      containers:
      - image: dotnetcore-ex:latest
        imagePullPolicy: IfNotPresent
        name: dotnetcore-ex
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
